--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,19 +3,51 @@
     <div class="content">
       <h1>Pash</h1>
       <h3>Go out and learn</h3>
-      <%= simple_form_for User.new, remote: true, html: { 'data-type': :json } do |f| %>
+      <%= simple_form_for Landing.new, remote: true, html: { 'data-type': :json } do |f| %>
           <%= f.input :email, as: :landing_email, label: false, input_html: { placeholder: 'Type your email...'} %>
       <% end %>
     </div>
   </div>
   <div class="welcome-carousel-slide-1">
     <div class="content">
-      <h2>Master your skills by teaching others</h2>
+      <h1>What do you associate with?</h1>
+      <div class="row text-center">
+        <%= simple_form_for Landing.new, remote: true, html: { 'data-type': :json } do |f| %>
+            <%= f.collection_check_boxes(:roles, Landing.roles, :downcase, :capitalize, item_wrapper_tag: :div, item_wrapper_class: 'col-lg-6 square-select') do |b| %>
+                <% b.label do |l| %>
+                    <%= b.check_box %>
+                    <div>
+                      <div>
+                        <%= image_tag "roles/#{b.text.downcase}.png" %>
+                        <h3><%= b.text %></h3>
+                      </div>
+                    </div>
+                <% end %>
+            <% end %>
+            <%= f.button :submit, 'Next', class: 'btn btn-lg btn-success full-width' %>
+        <% end %>
+      </div>
     </div>
   </div>
   <div class="welcome-carousel-slide-2">
     <div class="content">
-      <h2>Learn from skilled verified teachers</h2>
+      <h1>What skills interest you?</h1>
+      <div class="row text-center">
+        <%= simple_form_for Landing.new, remote: true, html: { 'data-type': :json } do |f| %>
+            <%= f.collection_check_boxes(:skills, Landing.skills, :downcase, :capitalize, item_wrapper_tag: :div, item_wrapper_class: 'col-lg-4 square-select') do |b| %>
+                <% b.label do |l| %>
+                    <%= b.check_box %>
+                    <div>
+                      <div>
+                        <%= image_tag "landing_skills/#{b.text.downcase}.png" %>
+                        <h5><%= b.text %></h5>
+                      </div>
+                    </div>
+                <% end %>
+            <% end %>
+            <%= f.button :submit, 'Done', class: 'btn btn-lg btn-success full-width' %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
