--- a/app/views/landings/_roles_form.html.erb
+++ b/app/views/landings/_roles_form.html.erb
@@ -1,18 +1,24 @@
 <span class="roles_form">
   <div class="row text-center">
     <%= simple_form_for landing, remote: true do |f| %>
-        <%= f.collection_check_boxes(:roles, Landing.roles, :downcase, :capitalize, boolean_style: :inline, item_wrapper_tag: :div, item_wrapper_class: 'col-lg-6 col-md-12 col-sm-12 square-select') do |b| %>
+        <%= f.collection_check_boxes(:roles, Landing.roles, :downcase, :capitalize, boolean_style: :inline, item_wrapper_tag: :div, item_wrapper_class: 'col-sm-6 col-xs-6 col-md-6 col-lg-6 square-select') do |b| %>
             <%= b.label for: nil do %>
                 <%= b.check_box %>
                 <div>
-                  <div>
+                  <div class="visible-lg visible-md">
                     <%= image_tag "roles/#{b.text.downcase}.png" %>
                     <h3><%= b.text %></h3>
+                  </div>
+                  <div class="visible-sm visible-xs">
+                    <%= image_tag "roles_small/#{b.text.downcase}.png" %>
+                    <h4><%= b.text %></h4>
                   </div>
                 </div>
             <% end %>
         <% end %>
-        <%= f.button :submit, 'Next', class: 'btn btn-lg btn-success full-width' %>
+        <div class="col-lg-12">
+          <%= f.button :submit, 'Next', class: 'btn btn-lg btn-success full-width' %>
+        </div>
     <% end %>
   </div>
 </span>
