--- a/app/views/landings/create.js.erb
+++ b/app/views/landings/create.js.erb
@@ -1,5 +1,9 @@
 $('.welcome-carousel').slick('slickNext');
-console.log("<%= @landing %>")
 $( ".email_form" ).replaceWith( '<%= escape_javascript(render 'email_form', landing: @landing) %>' );
 $( ".roles_form" ).replaceWith( '<%= escape_javascript(render 'roles_form', landing: @landing) %>' );
 $( ".skills_form" ).replaceWith( '<%= escape_javascript(render 'skills_form', landing: @landing) %>');
+$('.landing_other_skills input').tagsinput({
+    tagClass: function(item) {
+        return 'label label-success'
+    }
+});
