--- a/app/views/landings/update.js.erb
+++ b/app/views/landings/update.js.erb
@@ -1,1 +1,5 @@
+var currentSlide = $('.welcome-carousel').slick('slickCurrentSlide');
+if (currentSlide == 2) {
+    $('.landing-message').fadeIn();
+}
 $('.welcome-carousel').slick('slickNext');
