--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -16,6 +16,7 @@
       <h1>Pash</h1>
       <h3>People Teaching People</h3>
       <%= render 'landings/email_form', landing: Landing.new %>
+      <h5 class="landing-message">Thank you! We will contact you when our service is ready.</h5>
     </div>
   </div>
 </div>
