--- a/app/views/skills/requests/new.html.erb
+++ b/app/views/skills/requests/new.html.erb
@@ -6,7 +6,13 @@
       </div>
       <hr>
       <div class="col-lg-12">
-        <%= render 'users/skill.html.erb', skill: @skill %>
+        <div class="row table-vertical-center">
+          <div class="col-lg-6">
+            <h3><%= skill.skill_type.name.titleize %></h3>
+            <p class="h4"><%= skill.level_name %></p>
+            <p class="h4">$<%= skill.rate %>/hour</p>
+          </div>
+        </div>
       </div>
       <hr>
       <div class="col-lg-12">
